trunk/Archive2/e6/71e5003f38227a/output
main.cpp:11:9: error: use 'template' keyword to treat 'someTemplateFunc' as a dependent template name
      t.someTemplateFunc<int>(); // not ok
        ^
        template 
main.cpp:18:3: error: use of class template 'S' requires template arguments
  S s;
  ^
main.cpp:7:8: note: template is declared here
struct S {
       ^
2 errors generated.
