trunk/Archive2/e6/71e5003f38227a/main.cpp
struct T {
  template <typename Ty>
  Ty someTemplateFunc() { return Ty{}; }
};

template <typename Ty>
struct S {
  int f(const Ty &t) {
    return
      t.template someTemplateFunc<int>() + // ok
      t.someTemplateFunc<int>(); // not ok
    
  }
};

void f() {
  T t;
  S s;
  
  (void)s.f(t);
}

int main() { f(); }